Adding in our registries (icons and links)

--- a/registry.html
+++ b/registry.html
@@ -66,12 +66,14 @@
 <!-- Begin Page-specific content here -->
         <div class="row">
             <div class="center-col">
-                <div class="col-sm-6">
+                <div class="col-sm-6 registry__container">
                     <h3 class="page-title">Our Registries</h3>
-                    <!--<a href="#" target="_blank">
-                        <img class="registry__icon" src="images/registry/macys.jpg" alt="Macys" />
-                    </a>-->
-                    <span>Work in progress! Please check back later</span>
+                    <a href="http://www1.bloomingdales.com/registry/wedding/guest/?registryId=6164666" target="_blank">
+                        <img class="registry__icon" src="images/registry/bloomingdales.jpg" alt="Bloomingdales" />
+                    </a>
+                    <a href="https://secure.williams-sonoma.com/registry/2gglv52nj2/registry-list.html" target="_blank">
+                        <img class="registry__icon" src="images/registry/williams-sonoma.png" alt="Williams-Sonoma" />
+                    </a>
                 </div>
                 <div class="col-sm-6">
                     <img class="col-sm-12 registry__img" src="images/registry/happy.jpg" alt="Presents!" />
