Add myregistry link

--- a/registry.html
+++ b/registry.html
@@ -74,6 +74,9 @@
                     <a href="https://secure.williams-sonoma.com/registry/2gglv52nj2/registry-list.html" target="_blank">
                         <img class="registry__icon" src="images/registry/williams-sonoma.png" alt="Williams-Sonoma" />
                     </a>
+                    <a href="http://www.myregistry.com/wedding-registry/Gopi-Desai-Eric-Connelly-New-York-NY/698745" target="_blank">
+                        <img class="registry__icon" src="images/registry/myregistry.png" alt="MyRegistry" />
+                    </a>
                 </div>
                 <div class="col-sm-6">
                     <img class="col-sm-12 registry__img" src="images/registry/happy.jpg" alt="Presents!" />
