Add directions page and fix all other menus to include it

--- a/directions.html
+++ b/directions.html
@@ -69,28 +69,62 @@
         <div class="row">
             <div class="center-col">
                 <div class="col-sm-6">
-                    <h3>Saturday, October 4, 2014</h3>
+                    <h3>Driving to Garrison Golf Club</h3>
                     <div>
-                        <strong>4:45pm</strong>: Buses will depart from the Hyatt House and the Fishkill Marriott
-                        <br><br>
-                        <strong>5:00pm</strong>: Wedding ceremony and reception at
-                        <br><br>
-                        <strong>The Garrison Golf Club</strong><br>
-                        2015 US 9<br>
-                        Garrison, New York 10524<br>
-                        (845)-424-3604<br>
-                        <a href="http://www.thegarrison.com/contact-us.html" target="_blank">more information</a>
-                        <br><br>
-                        <strong>11:00pm</strong>: Keep the party going! After party at the bar at the Hyatt House following reception
+                        <strong>From Hotels</strong>
+                        <br>
+                        <ul>
+                            <li>Head North on Westage Business Center Dr toward Merritt Blvd</li>
+                            <li>Take 1st right onto W Merritt Blvd</li>
+                            <li>Take 2nd right onto Route 9 South; continue for 11 miles</li>
+                            <li>Turn right onto The Garrison's side entrance</li>
+                        </ul>
+                        <br>
+                        <strong>From New York</strong> (via Palisades Parkway)
+                        <br>
+                        <ul>
+                            <li>At end of George Washington Bridge, take Palisades Pkwy North</li>
+                            <li>Take Palisades Pkwy to the end to Bear Mountain Bridge</li>
+                            <li>Cross Bear Mountain Bridge, at the end take immediate left onto Route 9D North</li>
+                            <li>Travel appx 5 miles (through two traffic ligts)</li>
+                            <li>Turn right onto Snake Hill Road</li>
+                            <li>Continue appx 1.5 miles then turn left onto The Garrison side entrance</li>
+                        </ul>
+                        <br>
+                        <strong>From White Plains</strong> (via Taconic / Rt 9)
+                        <br>
+                        <ul>
+                            <li>Take Route 287 West to Exit 3 (Sprain Brook Pkwy / Taconic Pkwy North)</li>
+                            <li>Exit Taconic for Route 9A/100 North</li>
+                            <li>Route 9A merges with Route 9 North; continue on Route 9 North</li>
+                            <li>Just past Peekskill, follow signs for Route 9 North towards Fishkill (left at traffic light)</li>
+                            <li>The Garrison's main entrance is appx 6.5 miles ahead on the left</li>
+                        </ul>
                     </div>
 
-                    <h3>Sunday, October 5, 2014</h3>
+                    <h3>Public Transport to Garrison Golf Club</h3>
                     <div>
-                        <strong>8:00-11:00am</strong>: Brunch at the Hyatt House
+                        <strong>Trains from New York</strong>
+                        <br>
+                        <div>Trains run from Grand Central to Garrison, NY. If you plan to take the train please let Gopi and Eric know so we can arrange for a shuttle bus for transportation from the Garrison station to the wedding venue.</div>
+                        <br>
+                        <ul>
+                            <li><a href="http://as0.mta.info/mnr/schedules/sched_form.cfm" target="_blank">Search full schedule</a></li>
+                            <li>Grand Central to Garrison (75 mins)
+                            <br/>
+                            11:43, 12:43, 1:43, 2:43
+                            </li>
+                            <li>Garrison to Grand Central
+                            <br/>
+                            8:24 (80 mins), 9:24 (80 mins), 10:24 (80 mins), 11:24 (103 mins)
+                            </li>
+                        </ul>
                     </div>
                 </div>
                 <div class="col-sm-6">
-                    <img class="col-sm-12" src="images/the-garrison.jpg" alt="View of the Garrison" />
+                    <a href="http://bit.ly/1xTobOT" target="_blank">
+                        <img class="col-sm-12" src="images/directions/garrison_map.png" alt="Map to the Garrison" />
+                    </a>
                 </div>
             </div>
         </div>
