--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li><a class="eg-menu-item" href="details.html">Schedule of Events</a></li>
+                                    <li><a class="eg-menu-item" href="directions.html">Directions</a></li>
                                     <li><a class="eg-menu-item" href="hotel.html">Hotel</a></li>
                                     <li><a class="eg-menu-item" href="registry.html">Registry</a></li>
                                     <li><a class="eg-menu-item" href="bridal-party.html">Wedding Party</a></li>
@@ -56,6 +57,7 @@
                         </a>
                         <ul class="nav navbar-nav">
                             <li><a href="details.html">Schedule of Events</a></li>
+                            <li><a href="directions.html">Directions</a></li>
                             <li><a href="hotel.html">Hotel</a></li>
                             <li><a href="registry.html">Registry</a></li>
                             <li><a href="bridal-party.html">Wedding Party</a></li>
